--- a/src/styles/salud.css
+++ b/src/styles/salud.css
@@ -1,25 +1,4 @@
-#main {
-  width: 960px;
-}
-#seccion {
-  width: 600px;
-  min-height: 400px;
 
-  margin: 10px;
-  box-shadow: 1px 1px 10px #000;
-  display: inline-block;
-  padding-bottom: 20px;
-}
-
-aside {
-  display: inline-block;
-  width: 300px;
-  min-height: 400px;
-  background-color: rgb(232, 239, 239);
-  float: right;
-  margin: 10px;
-  padding-left: 5px;
-}
 .follow_us > h5 {
   font-family: fantasy;
   border-bottom: 3px solid white;
@@ -61,4 +40,13 @@ input {
 }
 .filtro {
   display: none;
+}
+
+
+
+#main_asia img{
+  max-width: 400px;
+}
+#main_osceania img{
+  max-width: 400px;
 }
